Fix rerendering of the inline version of katex-html
1.1.0-alpha.3

--- a/addon/templates/components/katex-html.hbs
+++ b/addon/templates/components/katex-html.hbs
@@ -1,5 +1,7 @@
-{{#if safeHtml}}
-  {{safeHtml}}
-{{else}}
-  {{yield}}
-{{/if}}
+<div class="katexHTML-content">
+  {{#if safeHtml}}
+    {{{result}}}
+  {{else}}
+    {{yield}}
+  {{/if}}
+</div>
